kubernetes/apps/networking/oauth2-proxy/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oauth2-proxy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        auth: oauth2-proxy
  extAuth:
    http:
      backendRef:
        name: oauth2-proxy
        namespace: networking
        port: 80
      headersToBackend:
        - authorization
        - cookie
        - x-auth-request-user
        - x-auth-request-email
        - x-auth-request-access-token
      path: /oauth2/auth
